# Meet_Mind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml
.claude/: settings.json
.claude/agents/: action-extractor.md  nugget-finder.md  person-extractor.md  summarizer.md
Process/: ph1_code-skeleton.md
backend/: alembic.ini  config.py  db.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/agents/: __init__.py  action_extractor.py  base.py  nugget_finder.py  person_extractor.py  summarizer.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/models/: __init__.py  action_item.py  meeting.py  nugget.py  person.py
backend/routes/: __init__.py  action_items.py  meetings.py  nuggets.py  people.py
backend/services/: __init__.py  pipeline.py
backend/tests/: test_extract_json.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Badge.tsx  MeetingDetail.tsx  MeetingList.tsx  ThemeToggle.tsx  TranscriptInput.tsx
frontend/src/hooks/: useMeetings.ts
frontend/src/lib/: api.ts
frontend/src/store/: uiStore.ts
soul/: SOUL.md  STYLE.md
